--- a/New folder/project_2a.ipynb
+++ b/New folder/project_2a.ipynb
@@ -38,28 +38,53 @@
    "execution_count": null,
    "id": "ca219eae",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count from 1 to 10\n",
+    "if hour>0 and hour <24:\n",
+    "                        if hour not in hours:\n",
+    "                            hours[hour] =1\n",
+    "                        else:\n",
+    "                            hours[hour] +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35e36ae3",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
+      "An error occurred: [Errno 2] No such file or directory: 'romeo-full.txt'\n"
      ]
     }
    ],
    "source": [
-    "# Count from 1 to 10\n",
-    "for i in range(1, 11):\n",
-    "    print(i)"
+    "'''\n",
+    "Exercise 3: Write a program that reads a file and prints the letters in decreasing\n",
+    "order of frequency.\n",
+    "Your program should convert all the input to lower case and only count the letters\n",
+    "a-z. Your program should not count spaces, digits, punctuation, or anything other\n",
+    "than the letters a-z. Find text samples from several different languages and see\n",
+    "how letter frequency varies between languages.\n",
+    "from collections import Counter\n",
+    "'''\n",
+    "import string\n",
+    "try: \n",
+    "    with open('mbox-short.txt') as lines:\n",
+    "       for line in lines:\n",
+    "           # line =line.rstrip()# remove trailing whitespace\n",
+    "            line = line.strip()# remove leading/trailing whitespace\n",
+    "            line = line.lower()\n",
+    "            line =line.translate(str.maketrans('','',string.punctuation)) # remove punctuation\n",
+    "            print(line)\n",
+    "                       \n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "\n"
    ]
   }
  ],
